# openzfs

./: .gitignore  META  Makefile.am  README.md  appveryor.yml  configure.ac  timer_test.c
.github/workflows/: codeql-macos.yaml  macos-build.yaml
cmd/: Makefile.am
cmd/arc_summary/: arc_summary2  arc_summary3
cmd/arcstat/: arcstat.in
cmd/os/macos/: Makefile.am
cmd/os/macos/mount_zfs/: Makefile.am
cmd/os/macos/zfs-pool-importer/: Makefile.am
cmd/os/macos/zfs-pool-importer/zfs-pool-importer/: Makefile.am  launch.h  launch.m  main.m  stdout.h  stdout.m
cmd/os/macos/zfs_util/: Makefile.am  zfs_util.c
cmd/os/macos/zsysctl/: Makefile.am  zsysctl.c
cmd/zdb/: Makefile.am  zdb.c
cmd/zed/: Makefile.am  zed.c  zed_conf.c  zed_disk_event.c  zed_exec.c
cmd/zed/agents/: zfs_agents.c  zfs_mod.c  zfs_retire.c
cmd/zed/zed.d/: Makefile.am  snapshot-mount.sh  zvol.create.sh  zvol.remove.sh
cmd/zfs/: Makefile.am  zfs_main.c
cmd/zfs_ids_to_path/: zfs_ids_to_path.c
cmd/zhack/: Makefile.am
cmd/zpool/: Makefile.am  zpool_util.h  zpool_vdev.c
cmd/zpool/compatibility.d/: openzfs-2.1.6-macOS
cmd/zpool/os/freebsd/: zpool_vdev_os.c
cmd/zpool/os/linux/: zpool_vdev_os.c
cmd/zpool/os/macos/: zpool_vdev_os.c
cmd/ztest/: Makefile.am
config/: Rules.am  always-arch.m4  always-compiler-options.m4  kernel-macos-headers.m4  kernel.m4  toolchain-simd.m4  user-libfetch.m4  user.m4  zfs-build.m4
contrib/: Makefile.am
contrib/macOS/pkg-scripts/postinstall_actions/: kextspost
contrib/macOS/pkg-scripts/preinstall_actions/: 0uninstall
etc/launchd/daemons/: Makefile.am  org.openzfsonosx.zfs-pool-importer.plist.in
etc/launchd/launchd.d/: Makefile.am  zpool-import-all.sh.in
etc/launchd/launchd.d/zfs-pool-importer/: Makefile.am  Package.swift  README.md  install.sh
etc/launchd/launchd.d/zfs-pool-importer/Sources/zfs-pool-importer/: launch.swift  main.swift  stdout.swift
include/: libzfs.h  libzfs_impl.h  libzutil.h
include/os/: Makefile.am
include/os/freebsd/linux/: compiler.h  types.h
include/os/macos/: Makefile.am
include/os/macos/spl/: stddef.h
include/sys/: abd.h  abd_impl.h  arc.h  dbuf.h  ddt.h  dsl_dataset.h  dsl_dir.h  mntent.h  spa.h  spa_impl.h  vdev.h  vdev_disk.h  vdev_raidz.h  zfs_context.h  zfs_debug.h  zfs_file.h  zfs_ioctl.h  zfs_ioctl_impl.h  zfs_sa.h  zfs_znode.h  zio.h  zio_crypt.h
include/sys/fm/fs/: zfs.h
include/sys/fs/: zfs.h
lib/: Makefile.am
lib/libefi/: Makefile.am  rdwr_efi_macos.c
lib/libicp/: Makefile.am
lib/libnvpair/: Makefile.am
lib/libshare/: Makefile.am
lib/libshare/os/macos/: nfs.c  smb.c
lib/libspl/: Makefile.am
lib/libspl/asm-x86_64/: atomic.S
lib/libspl/include/: Makefile.am  assert.h
lib/libspl/include/sys/: dkio.h  isa_defs.h  uio.h
lib/libspl/os/macos/: getexecname.c  gethostid.c  getmntany.c
lib/libuutil/: Makefile.am
lib/libzfs/: Makefile.am  libzfs_crypto.c  libzfs_dataset.c  libzfs_diff.c  libzfs_iter.c  libzfs_mount.c  libzfs_pool.c  libzfs_sendrecv.c
lib/libzfs/os/freebsd/: libzfs_compat.c  libzfs_fsshare.c  libzfs_zmount.c
lib/libzfs/os/linux/: libzfs_mount_os.c
lib/libzfs/os/macos/: libzfs_dataset_os.c  libzfs_getmntany.c  libzfs_mount_os.c  libzfs_pool_os.c  libzfs_refresh_finder.m  libzfs_util_os.c
lib/libzfs_core/: Makefile.am  libzfs_core.c  libzfs_core_compat.c
lib/libzfsbootenv/: Makefile.am
lib/libzpool/: Makefile.am  kernel.c
lib/libzutil/: Makefile.am  zutil_device_path.c  zutil_import.c
lib/libzutil/os/freebsd/: zutil_compat.c  zutil_device_path_os.c  (+1 more)
lib/os/macos/: Makefile.am
man/man8/: Makefile.am  zfsprops-macos.8
module/: .gitignore  Makefile.bsd  Makefile.in
module/avl/: avl.c
module/icp/core/: kcf_prov_lib.c  kcf_sched.c
module/icp/io/: sha1_mod.c  sha2_mod.c  skein_mod.c
module/icp/os/: modhash.c
module/lua/: ldo.c  lstrlib.c  lvm.c
module/lua/setjmp/: setjmp_x86_64.S
module/os/: Makefile.in
module/os/macos/: Makefile.am
module/os/macos/zfs/: Info.plist  Makefile.am  ZFSDataset.cpp  ZFSDatasetProxy.cpp  ZFSDatasetScheme.cpp  ZFSPool.cpp  abd.c  abd_os.c  arc_os.c  ldi_iokit.cpp  ldi_osx.c  ldi_vnode.c  spa_misc_os.c  spa_stats.c  sysctl_os.c  test.c  vdev_disk.c  vdev_file.c  zfs_acl.c  zfs_boot.cpp  zfs_ctldir.c  zfs_debug.c  zfs_dir.c  zfs_file_os.c  zfs_ioctl_os.c  zfs_kstat_osx.c  zfs_osx.cpp  zfs_vfsops.c  zfs_vnops.c  zfs_vnops_os.c  zfs_vnops_osx.c  zfs_vnops_osx_lib.c  zfs_vnops_osx_xattr.c  zfs_znode.c  zio_crypt.c  zvolIO.cpp  zvol_os.c
module/zcommon/: zfeature_common.c  zfs_fletcher.c  zfs_prop.c  zprop_common.c
module/zfs/: abd.c  arc.c  dbuf.c  ddt.c  dmu.c  dmu_objset.c  dmu_send.c  dmu_zfetch.c  dsl_crypt.c  dsl_dataset.c  dsl_dir.c  dsl_pool.c  dsl_scan.c  metaslab.c  sa.c  spa.c  spa_misc.c  vdev_raidz_math.c  vdev_raidz_math_aarch64_neonx2.c  zcp_get.c  zfs_fm.c  zfs_fuid.c  zfs_ioctl.c  zfs_log.c  zfs_onexit.c  zfs_quota.c  zfs_replay.c  zfs_sa.c  zfs_vnops.c  zio.c  zio_checksum.c  zvol.c
module/zstd/: zfs_zstd.c
module/zstd/lib/: zstd.c
scripts/: cmd-macos.sh  debug-macos.sh  pkg_macos.sh  zfs-tests.sh  zfs.sh
tests/runfiles/: freebsd.run  large.run  macOS-CI.run
tests/zfs-tests/cmd/: Makefile.am
tests/zfs-tests/include/: blkdev.shlib  commands.cfg  default.cfg.in  libtest.shlib  properties.shlib  tunables.cfg
(+431 files in other folders)
